# starlink

applications/smurf/: Makefile.am  configure.ac  smurf.ifd.in  smurf_mon.c
applications/smurf/jcmt/: state.h
applications/smurf/libccatsim/: Makefile.am  ccatsim.h  ccatsim_check_dset.c  ccatsim_closefile.c  ccatsim_error.c  ccatsim_fill_smfHead.c  ccatsim_free_smfHead.c  ccatsim_getdata.c  ccatsim_getdims.c  ccatsim_getstring.c  ccatsim_openfile.c  ccatsim_setfitshead.c  ccatsim_setstate.c  ccatsim_writebolo.c
applications/smurf/libsmf/: smf_calc_subinst.c  smf_calc_telres.c  smf_inst_get.c  smf_mapbounds.c  smf_mask_noisy.c  smf_open_file.c  smf_tslice_ast.c  smf_typ.h
applications/smurf/libsmurf/: Makefile.am  smurf_impccatsim.c  smurflib.h
