
noinst_LTLIBRARIES = libccatsim.la

libccatsim_la_SOURCES = $(C_ROUTINES)

C_ROUTINES = \
	ccatsim_check_dset.c \
	ccatsim_closefile.c \
	ccatsim_error.c \
	ccatsim_getdata.c \
	ccatsim_getstring.c \
	ccatsim_openfile.c \
	ccatsim_setfitshead.c \
	ccatsim_setstate.c \
	ccatsim_writebolo.c

noinst_INCLUDES = ccatsim.h

